# cco-tdiag

./: .gitignore  Makefile  README  badexample1.tdiag  badexample2.tdiag  badexample3.tdiag  badexample4.tdiag  complete.tex  example1.tdiag  example2.tdiag  example3.tdiag  example4.tdiag  example5.tdiag  example6.tdiag  example7.tdiag  tdiag.cabal  tdiagrams.cabal
doc/: design.tex
src/: ParseTDiag.hs  PpPicture.hs  TCTDiag.hs  TDiag2Picture.hs
src/CCO/: Convert.hs  Diag.hs  Picture.hs  Types.hs
src/CCO/Convert/: AG.ag  AG.hs
src/CCO/Convert/AG/: Base.ag
src/CCO/Diag/: .gitignore  AG.ag  Base.hs  Convert.hs  ConvertAG.ag  GeneratePictures.hs  Lexer.hs  Parser.hs  TypeCheck.hs  TypeCheckAG.ag  TypeCheckFunctions.hs
src/CCO/Diag/AG/: Base.ag  Convert.ag  TypeCheck.ag
src/CCO/Picture/: AG.ag
src/CCO/Picture/AG/: Base.ag  Printing.ag
