Name:                tdiag
Version:             0.1
Synopsis:            Typeset a T-diagram in LaTeX
Description:         This package contains 2 tools, tc-tdiag and tdiag2picture. tc-tdiag takes as input a description 
                     of a T-diagram in our DSL, and typechecks it. Things like executing Haskell with a Java interpreter
                     are prohibited. The other tool, tdiag2picture, takes a tdiag as input, and converts it to a LaTeX picture-
                     environment object. 
License:             GPL-3
License-file:        LICENSE
Category:            Typesetting
Author:              Paul van der Walt (3120805)
Maintainer:          p.d.vanderwalt@students.uu.nl
Copyright:           2010 P. D. van der Walt
Build-type:          Simple
Cabal-version:       >=1.6
-- extra-source-files:  example1.bib
--                      example2.bib
--                      example3.bib
--                      example4.bib
-- data-files:          README
--                      haddock.pdf
--                      latex-doc/*.tex
--                      latex-doc/haddock.sty
-- 
-- Library
--     Exposed-modules: 
--                      Common.AllowedFields
--                      Common.BibTypes
--                      Common.HtmlTypes
--                      Common.TreeInstances
--                      Common.ATermUtils
--                      ParseBib.ParserUtils
--                      ParseBib.Parser
--                      ParseBib.Tool
--                      AbstractBib2HTML.Tool
--                      PrettyPrintHTML.Tool
--                      
-- Executable pp-html
--     Main-is:         Main.hs
--     Build-depends:   uu-parsinglib>=2.5.6.1,base >= 3 && < 5,cco>=0.0.4,ffi,rts,ansi-terminal
--     hs-source-dirs:  PrettyPrintHTML,.
-- Executable bib2html
--     Main-is:         Main.hs
--     Build-depends:   uu-parsinglib>=2.5.6.1,base >= 3 && < 5,cco>=0.0.4,ffi,rts,ansi-terminal
--     hs-source-dirs:  AbstractBib2HTML,.
-- Executable parse-bib
--     Main-is:         Main.hs
--     Build-depends:   uu-parsinglib>=2.5.6.1,base >= 3 && < 5,cco>=0.0.4,ffi,rts,ansi-terminal,haskell98
--     hs-source-dirs:  ParseBib,.
