name:                  tdiagrams
version:               0.0.4
synopsis:              Utilities for drawing T-diagrams in LaTeX
description:           Project distribution for Mini Project B of the course on
                       Compiler Construction (INFOMCCO) at Utrecht University.
license:               AllRightsReserved
license-file:          LICENSE
category:              Compilers/Interpreters
copyright:             (c) 2008 Utrecht University
author:                Stefan Holdermans
maintainer:            Stefan Holdermans <stefan@cs.uu.nl>
stability:             provisional
homepage:              http://www.cs.uu.nl/wiki/Cco/MiniProjects
tested-with:           GHC == 6.8.2, GHC == 6.8.3, GHC == 6.10.1
build-type:            Simple
cabal-version:         >= 1.2
extra-source-files:    AUTHORS, Makefile, src/CCO/Diag/AG.ag,
                       src/CCO/Diag/AG/Base.ag, src/CCO/Picture/AG.ag,
                       src/CCO/Picture/AG/Base.ag, 
                       src/CCO/Picture/AG/Printing.ag

executable parse-tdiag
  main-is:             ParseTDiag.hs
  build-depends:       base, cco >= 0.0.4
  other-modules:       CCO.Diag, CCO.Diag.AG, CCO.Diag.Base, CCO.Diag.Lexer,
                       CCO.Diag.Parser
  hs-source-dirs:      src

executable pp-picture
  main-is:             PpPicture.hs
  build-depends:       base, cco >= 0.0.4
  other-modules:       CCO.Picture, CCO.Picture.AG
  hs-source-dirs:      src