name:                  tdiagrams
version:               0.0.4
synopsis:              Utilities for drawing T-diagrams in LaTeX
description:           Project distribution for Mini Project B of the course on
                       Compiler Construction (INFOMCCO) at Utrecht University. The
                       AG files don't include Haddock, as this is parsed incorrectly. 
                       See the included file doc/design.pdf for more information.
license:               MIT
license-file:          LICENSE
category:              Compilers/Interpreters
copyright:             (c) 2011 Paul van der Walt
author:                Stefan Holdermans,
                       Paul van der Walt
maintainer:            Stefan Holdermans <stefan@cs.uu.nl>
stability:             provisional
homepage:              http://www.cs.uu.nl/wiki/Cco/MiniProjects
tested-with:           GHC == 6.8.2, GHC == 6.8.3, GHC == 6.10.1
build-type:            Simple
cabal-version:         >= 1.4
extra-source-files:    AUTHORS, 
                       Makefile, 
                       README, 
                       src/CCO/Diag/TypeCheckAG.ag
                       src/CCO/Diag/ConvertAG.ag
                       src/CCO/Diag/AG/Base.ag, 
                       src/CCO/Diag/AG/Convert.ag,
                       src/CCO/Diag/AG/TypeCheck.ag,
                       src/CCO/Picture/AG.ag,
                       src/CCO/Picture/AG/Base.ag, 
                       src/CCO/Picture/AG/Printing.ag
data-files:            example1.tdiag
                       example2.tdiag
                       example3.tdiag
                       example4.tdiag
                       example5.tdiag
                       example6.tdiag
                       example7.tdiag
                       badexample1.tdiag
                       badexample2.tdiag
                       badexample3.tdiag
                       doc/design.tex
                       doc/design.pdf
                       badexample4.tdiag

executable parse-tdiag
  main-is:             ParseTDiag.hs
  build-depends:       base, cco >= 0.0.4
  other-modules:       CCO.Diag, CCO.Diag.ConvertAG, CCO.Diag.Base, CCO.Diag.Lexer,
                       CCO.Diag.Parser
  hs-source-dirs:      src

executable pp-picture
  main-is:             PpPicture.hs
  build-depends:       base, cco >= 0.0.4
  other-modules:       CCO.Picture, CCO.Picture.AG
  hs-source-dirs:      src

executable tc-tdiag
  main-is:             TCTDiag.hs
  build-depends:       base, cco >= 0.0.4, uuagc
  other-modules:       CCO.Diag, CCO.Diag.TypeCheckAG, CCO.Diag.Base, CCO.Diag.TypeCheckFunctions
  hs-source-dirs:      src

executable tdiag2picture
  main-is:             TDiag2Picture.hs
  build-depends:       base, cco >= 0.0.4, uuagc
  other-modules:       CCO.Diag, CCO.Diag.ConvertAG, CCO.Diag.Base, CCO.Diag.GeneratePictures
  hs-source-dirs:      src

library
  hs-source-dirs:      src
  exposed-modules:     CCO.Types
                       CCO.Diag.Convert
                       CCO.Diag.GeneratePictures
                       CCO.Diag.TypeCheck
                       CCO.Diag.TypeCheckFunctions
